# forty40

./: .gitignore  Cargo.toml  README.md
benches/: benchmark.rs
src/: count.rs  heap.rs  iter.rs  lex.rs  lib.rs  list.rs  macros.rs  mrep.rs  multi.rs  perm.rs  set.rs  shift.rs  shuffle.rs
src/compress/: huffman.rs
src/math/: constants.rs  count.rs  logic.rs  mod.rs  number.rs  tricks.rs
src/permute/: heap.rs  lex.rs
src/shuffle/: code.rs  lex.rs  mod.rs
src/util/: count.rs  mod.rs  perm.rs  shift.rs
