[package]
name = "malamute"
version = "0.0.1"
authors = ["4meta5 <asinghchrony@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "benchmark"
harness = false